<?xml version="1.0"?>
<package format="2">
  <name>rqt_estop</name>
  <version>0.0.1</version>
  <description>RQT interface for estop button</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nicholas.lawrance@oregonstate.edu">Nick</maintainer>
  <maintainer email="find.me@github.com">EchoHowardLam</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
